# barcode_reader

./: Cargo.toml
examples/: reader.rs
src/: event.rs  lib.rs  sys.rs
src/sys/: windows.rs
src/sys/windows/: hook.rs
