[package]
name = "barcode_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.17.1"


[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader"
    
]

# "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse" 
 #   "Data_Xml_Dom",
 #   "Win32_Foundation",
 #   "Win32_Security",
  #  "Win32_System_Threading",
   # "Win32_UI_WindowsAndMessaging",